Fix all overflow issues.

--- a/css/footer.scss
+++ b/css/footer.scss
@@ -19,7 +19,6 @@ footer {
 
 .footer-data {
     padding-left: $header-footer-left-offset;
-    width: 86vw;
 
     margin: auto;
     padding-top: calc(#{$footer-height} / 4);
