--- a/css/main.scss
+++ b/css/main.scss
@@ -18,6 +18,9 @@
 * {
     margin: 0;
     padding: 0;
+
+    overflow-x: scroll;
+    overflow-y: scroll;
 }
 
 body {
